# A.T.D.

./: README.md  Untitled-1.cpp  axis_proxy.py  index.html  package-lock.json  package.json  tsconfig.json
acap-package/: CMakeLists.txt  Makefile  README.md  build.sh  manifest.xml  package.conf  param.conf
acap-package/scripts/: setup.sh
acap-package/src/: main.cpp
acap-package/www/: index.html
src/: App.tsx  index.css
src/components/: ActivityChart.tsx  AxisCamera.tsx  FloorPlan.tsx  Heatmap.tsx
src/types/: index.ts
src/utils/: motionDetection.ts  simulation.ts
